--- a/index.html
+++ b/index.html
@@ -1,57 +1,57 @@
 [
 {
+"pic":"lib/images/p91.png",
+"ty0":"lib/images/mwater.png",
+"ty1":"lib/images/mice.png",
+"ncp":"CP 1383 - 1455",
+"w0":"lib/images/wrain.png",
+"w1":"lib/images/wsnow.png",
+"hcp":"CP 1729 - 1819",
+"sh":"",
+"b1":"lib/images/Water.png","b2":"lib/images/Ice.png","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Rock.png","g3":"lib/images/Electric.png","g4":"lib/images/Grass.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"刺甲貝","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p386a.png","bu22":"代歐奇希斯","bu23":"lib/images/Psychic.png","bu24":"意念頭錘","bu25":"lib/images/Electric.png","bu26":"電磁炮","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Poison.png","bu34":"毒擊","bu35":"lib/images/Electric.png","bu36":"電磁炮"
+},
+{
 "pic":"lib/images/p103.png",
 "ty0":"lib/images/mgrass.png",
-"ty1":"lib/images/mpsychic.png",
+"ty1":"lib/images/mdragon.png",
 "ncp":"CP 1643 - 1722",
 "w0":"lib/images/wsun.png",
 "w1":"lib/images/wwindy.png",
 "hcp":"CP 2055 - 2153",
-"sh":"",
-"b1":"lib/images/Fighting.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"lib/images/Psychic.png","b6":"lib/images/Ground.png","b7":"","b8":"","b9":"","g1":"lib/images/Bug.png","g2":"lib/images/Fire.png","g3":"lib/images/Ice.png","g4":"lib/images/Flying.png","g5":"lib/images/Poison.png","g6":"lib/images/Dark.png","g7":"lib/images/Ghost.png","g8":"","g9":"","n":"椰蛋樹 - 飄浮泡泡的樣子","bu11":"lib/images/p127.png","bu12":"凱羅斯","bu13":"lib/images/Bug.png","bu14":"蟲咬","bu15":"lib/images/Bug.png","bu16":"十字剪","bu21":"lib/images/p469.png","bu22":"遠古巨蜓","bu23":"lib/images/Bug.png","bu24":"蟲咬","bu25":"lib/images/Bug.png","bu26":"蟲鳴","bu31":"lib/images/p127.png","bu32":"凱羅斯","bu33":"lib/images/Bug.png","bu34":"連斬","bu35":"lib/images/Bug.png","bu36":"十字剪"
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹-阿羅拉","bu11":"lib/images/p473.png","bu12":"象牙豬","bu13":"lib/images/Ice.png","bu14":"細雪","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p461.png","bu22":"瑪狃拉","bu23":"lib/images/Ice.png","bu24":"冰礫","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p471.png","bu32":"冰伊布","bu33":"lib/images/Ice.png","bu34":"冰息","bu35":"lib/images/Ice.png","bu36":"雪崩"
 },
 {
-"pic":"lib/images/p211.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"lib/images/mpoison.png",
+"pic":"lib/images/p215.png",
+"ty0":"lib/images/mdark.png",
+"ty1":"lib/images/mice.png",
 "ncp":"CP 1107 - 1172",
-"w0":"lib/images/wrain.png",
-"w1":"lib/images/wcloudy.png",
+"w0":"lib/images/wfoggy.png",
+"w1":"lib/images/wsnow.png",
 "hcp":"CP 1384 - 1465",
-"sh":"",
-"b1":"lib/images/Ice.png","b2":"lib/images/Fire.png","b3":"lib/images/Water.png","b4":"lib/images/Fighting.png","b5":"lib/images/Steel.png","b6":"lib/images/Bug.png","b7":"lib/images/Poison.png","b8":"lib/images/Fairy.png","b9":"","g1":"lib/images/Ground.png","g2":"lib/images/Psychic.png","g3":"lib/images/Electric.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"千針魚","bu11":"lib/images/p386a.png","bu12":"代歐奇希斯","bu13":"lib/images/Psychic.png","bu14":"意念頭錘","bu15":"lib/images/Electric.png","bu16":"電磁炮","bu21":"lib/images/p386a.png","bu22":"代歐奇希斯","bu23":"lib/images/Psychic.png","bu24":"意念頭錘","bu25":"lib/images/Psychic.png","bu26":"精神突進","bu31":"lib/images/p386.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Electric.png","bu36":"十萬伏特"
-},
-{
-"pic":"lib/images/p259.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"lib/images/mground.png",
-"ncp":"CP 955 - 1015",
-"w0":"lib/images/wrain.png",
-"w1":"lib/images/wsun.png",
-"hcp":"CP 1194 - 1269",
-"sh":"",
-"b1":"lib/images/Electric.png","b2":"lib/images/Steel.png","b3":"lib/images/Rock.png","b4":"lib/images/Poison.png","b5":"lib/images/Fire.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"沼躍魚","bu11":"lib/images/p407.png","bu12":"羅絲雷朵","bu13":"lib/images/Grass.png","bu14":"飛葉快刀","bu15":"lib/images/Grass.png","bu16":"日光束","bu21":"lib/images/p407.png","bu22":"羅絲雷朵","bu23":"lib/images/Grass.png","bu24":"飛葉快刀","bu25":"lib/images/Grass.png","bu26":"打草結","bu31":"lib/images/p254.png","bu32":"蜥蜴王","bu33":"lib/images/Grass.png","bu34":"種子機關槍","bu35":"lib/images/Grass.png","bu36":"瘋狂植物"
-},
-{
-"pic":"lib/images/p349.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"",
-"ncp":"CP 132 - 157",
-"w0":"lib/images/wrain.png",
-"w1":"",
-"hcp":"CP 165 - 196",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Steel.png","b2":"lib/images/Water.png","b3":"lib/images/Ice.png","b4":"lib/images/Fire.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"lib/images/Electric.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"醜醜魚","bu11":"lib/images/p386a.png","bu12":"代歐奇希斯","bu13":"lib/images/Psychic.png","bu14":"意念頭錘","bu15":"lib/images/Electric.png","bu16":"電磁炮","bu21":"lib/images/p386a.png","bu22":"代歐奇希斯","bu23":"lib/images/Poison.png","bu24":"毒擊","bu25":"lib/images/Electric.png","bu26":"電磁炮","bu31":"lib/images/p386.png","bu32":"代歐奇希斯","bu33":"lib/images/Electric.png","bu34":"充電光束","bu35":"lib/images/Electric.png","bu36":"十萬伏特"
+"b1":"lib/images/Ghost.png","b2":"lib/images/Ice.png","b3":"lib/images/Dark.png","b4":"lib/images/Psychic.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Fairy.png","g3":"lib/images/Bug.png","g4":"lib/images/Steel.png","g5":"lib/images/Fire.png","g6":"lib/images/Rock.png","g7":"","g8":"","g9":"","n":"狃拉","bu11":"lib/images/p286.png","bu12":"斗笠菇","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"爆裂拳","bu21":"lib/images/p68.png","bu22":"怪力","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p257.png","bu32":"火焰雞","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"真氣彈"
 },
 {
-"pic":"lib/images/p366.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"",
-"ncp":"CP 675 - 726",
-"w0":"lib/images/wrain.png",
-"w1":"",
-"hcp":"CP 845 - 907",
+"pic":"lib/images/p281.png",
+"ty0":"lib/images/mpsychic.png",
+"ty1":"lib/images/mfairy.png",
+"ncp":"CP 508 - 552",
+"w0":"lib/images/wwindy.png",
+"w1":"lib/images/wcloudy.png",
+"hcp":"CP 635 - 690",
+"sh":"",
+"b1":"lib/images/Psychic.png","b2":"lib/images/Fighting.png","b3":"lib/images/Dragon.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Poison.png","g2":"lib/images/Ghost.png","g3":"lib/images/Steel.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"奇魯莉安","bu11":"lib/images/p376.png","bu12":"巨金怪","bu13":"lib/images/Steel.png","bu14":"子彈拳","bu15":"lib/images/Steel.png","bu16":"彗星拳","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"舌舔","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p94.png","bu32":"耿鬼","bu33":"lib/images/Ghost.png","bu34":"暗影爪","bu35":"lib/images/Ghost.png","bu36":"暗影球"
+},
+{
+"pic":"lib/images/p303.png",
+"ty0":"lib/images/msteel.png",
+"ty1":"lib/images/mfairy.png",
+"ncp":"CP 877 - 934",
+"w0":"lib/images/wsnow.png",
+"w1":"lib/images/wcloudy.png",
+"hcp":"CP 1096 - 1167",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Steel.png","b2":"lib/images/Water.png","b3":"lib/images/Ice.png","b4":"lib/images/Fire.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"lib/images/Electric.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"珍珠貝","bu11":"lib/images/p386a.png","bu12":"代歐奇希斯","bu13":"lib/images/Psychic.png","bu14":"意念頭錘","bu15":"lib/images/Electric.png","bu16":"電磁炮","bu21":"lib/images/p386a.png","bu22":"代歐奇希斯","bu23":"lib/images/Poison.png","bu24":"毒擊","bu25":"lib/images/Electric.png","bu26":"電磁炮","bu31":"lib/images/p386.png","bu32":"代歐奇希斯","bu33":"lib/images/Electric.png","bu34":"充電光束","bu35":"lib/images/Electric.png","bu36":"十萬伏特"
+"b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p257.png","bu12":"火焰雞","bu13":"lib/images/Fire.png","bu14":"火焰旋渦","bu15":"lib/images/Fire.png","bu16":"爆炸烈焰","bu21":"lib/images/p146.png","bu22":"火焰鳥","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p136.png","bu32":"火伊布","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
 }
 ]
