--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
 [
 {
-"pic":"lib/images/p91.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"lib/images/mice.png",
-"ncp":"CP 1383 - 1455",
-"w0":"lib/images/wrain.png",
-"w1":"lib/images/wsnow.png",
-"hcp":"CP 1729 - 1819",
-"sh":"",
-"b1":"lib/images/Water.png","b2":"lib/images/Ice.png","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Rock.png","g3":"lib/images/Electric.png","g4":"lib/images/Grass.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"刺甲貝","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p386a.png","bu22":"代歐奇希斯","bu23":"lib/images/Psychic.png","bu24":"意念頭錘","bu25":"lib/images/Electric.png","bu26":"電磁炮","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Poison.png","bu34":"毒擊","bu35":"lib/images/Electric.png","bu36":"電磁炮"
-},
-{
-"pic":"lib/images/p103.png",
+"pic":"lib/images/p103al.png",
 "ty0":"lib/images/mgrass.png",
 "ty1":"lib/images/mdragon.png",
 "ncp":"CP 1643 - 1722",
@@ -20,6 +9,28 @@
 "hcp":"CP 2055 - 2153",
 "sh":"lib/images/sh1.png",
 "b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹-阿羅拉","bu11":"lib/images/p473.png","bu12":"象牙豬","bu13":"lib/images/Ice.png","bu14":"細雪","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p461.png","bu22":"瑪狃拉","bu23":"lib/images/Ice.png","bu24":"冰礫","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p471.png","bu32":"冰伊布","bu33":"lib/images/Ice.png","bu34":"冰息","bu35":"lib/images/Ice.png","bu36":"雪崩"
+},
+{
+"pic":"lib/images/p204.png",
+"ty0":"lib/images/mbug.png",
+"ty1":"",
+"ncp":"CP 586 - 633",
+"w0":"lib/images/wrain.png",
+"w1":"",
+"hcp":"CP 733 - 791",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Fighting.png","b2":"lib/images/Grass.png","b3":"lib/images/Ground.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fire.png","g2":"lib/images/Flying.png","g3":"lib/images/Rock.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"榛果球","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p146.png","bu22":"火焰鳥","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Flying.png","bu26":"神鳥猛擊","bu31":"lib/images/p257.png","bu32":"火焰雞","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"爆炸烈焰"
+},
+{
+"pic":"lib/images/p207.png",
+"ty0":"lib/images/mground.png",
+"ty1":"lib/images/mflying.png",
+"ncp":"CP 1000 - 1061",
+"w0":"lib/images/wsun.png",
+"w1":"lib/images/wwindy.png",
+"hcp":"CP 1250 - 1326",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Electric.png","b2":"lib/images/Fighting.png","b3":"lib/images/Bug.png","b4":"lib/images/Poison.png","b5":"lib/images/Ground.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Water.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"天蠍","bu11":"lib/images/p473.png","bu12":"象牙豬","bu13":"lib/images/Ice.png","bu14":"細雪","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p461.png","bu22":"瑪狃拉","bu23":"lib/images/Ice.png","bu24":"冰礫","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p471.png","bu32":"冰伊布","bu33":"lib/images/Ice.png","bu34":"冰息","bu35":"lib/images/Ice.png","bu36":"雪崩"
 },
 {
 "pic":"lib/images/p215.png",
@@ -31,17 +42,6 @@
 "hcp":"CP 1384 - 1465",
 "sh":"lib/images/sh1.png",
 "b1":"lib/images/Ghost.png","b2":"lib/images/Ice.png","b3":"lib/images/Dark.png","b4":"lib/images/Psychic.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Fairy.png","g3":"lib/images/Bug.png","g4":"lib/images/Steel.png","g5":"lib/images/Fire.png","g6":"lib/images/Rock.png","g7":"","g8":"","g9":"","n":"狃拉","bu11":"lib/images/p286.png","bu12":"斗笠菇","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"爆裂拳","bu21":"lib/images/p68.png","bu22":"怪力","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p257.png","bu32":"火焰雞","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"真氣彈"
-},
-{
-"pic":"lib/images/p281.png",
-"ty0":"lib/images/mpsychic.png",
-"ty1":"lib/images/mfairy.png",
-"ncp":"CP 508 - 552",
-"w0":"lib/images/wwindy.png",
-"w1":"lib/images/wcloudy.png",
-"hcp":"CP 635 - 690",
-"sh":"",
-"b1":"lib/images/Psychic.png","b2":"lib/images/Fighting.png","b3":"lib/images/Dragon.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Poison.png","g2":"lib/images/Ghost.png","g3":"lib/images/Steel.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"奇魯莉安","bu11":"lib/images/p376.png","bu12":"巨金怪","bu13":"lib/images/Steel.png","bu14":"子彈拳","bu15":"lib/images/Steel.png","bu16":"彗星拳","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"舌舔","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p94.png","bu32":"耿鬼","bu33":"lib/images/Ghost.png","bu34":"暗影爪","bu35":"lib/images/Ghost.png","bu36":"暗影球"
 },
 {
 "pic":"lib/images/p303.png",
