--- a/index.html
+++ b/index.html
@@ -1,57 +1,57 @@
 [
 {
-"pic":"lib/images/p103al.png",
-"ty0":"lib/images/mgrass.png",
-"ty1":"lib/images/mdragon.png",
-"ncp":"CP 1643 - 1722",
-"w0":"lib/images/wsun.png",
-"w1":"lib/images/wwindy.png",
-"hcp":"CP 2055 - 2153",
-"sh":"lib/images/sh1.png",
-"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹-阿羅拉","bu11":"lib/images/p473.png","bu12":"象牙豬","bu13":"lib/images/Ice.png","bu14":"細雪","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p461.png","bu22":"瑪狃拉","bu23":"lib/images/Ice.png","bu24":"冰礫","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p471.png","bu32":"冰伊布","bu33":"lib/images/Ice.png","bu34":"冰息","bu35":"lib/images/Ice.png","bu36":"雪崩"
-},
-{
-"pic":"lib/images/p204.png",
-"ty0":"lib/images/mbug.png",
-"ty1":"",
-"ncp":"CP 586 - 633",
+"pic":"lib/images/p26al.png",
+"ty0":"lib/images/melectric.png",
+"ty1":"lib/images/mpsychic.png",
+"ncp":"CP 1238 - 1306",
 "w0":"lib/images/wrain.png",
-"w1":"",
-"hcp":"CP 733 - 791",
-"sh":"lib/images/sh1.png",
-"b1":"lib/images/Fighting.png","b2":"lib/images/Grass.png","b3":"lib/images/Ground.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fire.png","g2":"lib/images/Flying.png","g3":"lib/images/Rock.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"榛果球","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p146.png","bu22":"火焰鳥","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Flying.png","bu26":"神鳥猛擊","bu31":"lib/images/p257.png","bu32":"火焰雞","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"爆炸烈焰"
-},
-{
-"pic":"lib/images/p207.png",
-"ty0":"lib/images/mground.png",
-"ty1":"lib/images/mflying.png",
-"ncp":"CP 1000 - 1061",
-"w0":"lib/images/wsun.png",
 "w1":"lib/images/wwindy.png",
-"hcp":"CP 1250 - 1326",
+"hcp":"CP 1548 - 1633",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Electric.png","b2":"lib/images/Fighting.png","b3":"lib/images/Bug.png","b4":"lib/images/Poison.png","b5":"lib/images/Ground.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Water.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"天蠍","bu11":"lib/images/p473.png","bu12":"象牙豬","bu13":"lib/images/Ice.png","bu14":"細雪","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p461.png","bu22":"瑪狃拉","bu23":"lib/images/Ice.png","bu24":"冰礫","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p471.png","bu32":"冰伊布","bu33":"lib/images/Ice.png","bu34":"冰息","bu35":"lib/images/Ice.png","bu36":"雪崩"
+"b1":"lib/images/Fighting.png","b2":"lib/images/Steel.png","b3":"lib/images/Electric.png","b4":"lib/images/Psychic.png","b5":"lib/images/Flying.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Dark.png","g2":"lib/images/Ground.png","g3":"lib/images/Bug.png","g4":"lib/images/Ghost.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"雷丘-阿羅拉","bu11":"lib/images/p94.png","bu12":"耿鬼","bu13":"lib/images/Ghost.png","bu14":"舌舔","bu15":"lib/images/Ghost.png","bu16":"暗影球","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"暗影爪","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p94.png","bu32":"耿鬼","bu33":"lib/images/Ghost.png","bu34":"禍不單行","bu35":"lib/images/Ghost.png","bu36":"暗影球"
 },
 {
-"pic":"lib/images/p215.png",
-"ty0":"lib/images/mdark.png",
-"ty1":"lib/images/mice.png",
-"ncp":"CP 1107 - 1172",
-"w0":"lib/images/wfoggy.png",
-"w1":"lib/images/wsnow.png",
-"hcp":"CP 1384 - 1465",
+"pic":"lib/images/p213.png",
+"ty0":"lib/images/mbug.png",
+"ty1":"lib/images/mrock.png",
+"ncp":"CP 189 - 231",
+"w0":"lib/images/wrain.png",
+"w1":"lib/images/wclsu.png",
+"hcp":"CP 236 - 289",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Ghost.png","b2":"lib/images/Ice.png","b3":"lib/images/Dark.png","b4":"lib/images/Psychic.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Fairy.png","g3":"lib/images/Bug.png","g4":"lib/images/Steel.png","g5":"lib/images/Fire.png","g6":"lib/images/Rock.png","g7":"","g8":"","g9":"","n":"狃拉","bu11":"lib/images/p286.png","bu12":"斗笠菇","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"爆裂拳","bu21":"lib/images/p68.png","bu22":"怪力","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p257.png","bu32":"火焰雞","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"真氣彈"
+"b1":"lib/images/Poison.png","b2":"lib/images/Normal.png","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Water.png","g2":"lib/images/Rock.png","g3":"lib/images/Steel.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"壺壺","bu11":"lib/images/p376.png","bu12":"巨金怪","bu13":"lib/images/Steel.png","bu14":"子彈拳","bu15":"lib/images/Steel.png","bu16":"彗星拳","bu21":"lib/images/p409.png","bu22":"戰槌龍","bu23":"lib/images/Rock.png","bu24":"擊落","bu25":"lib/images/Rock.png","bu26":"岩崩","bu31":"lib/images/p382.png","bu32":"蓋歐卡","bu33":"lib/images/Water.png","bu34":"攀瀑","bu35":"lib/images/Water.png","bu36":"水炮"
 },
 {
-"pic":"lib/images/p303.png",
-"ty0":"lib/images/msteel.png",
-"ty1":"lib/images/mfairy.png",
-"ncp":"CP 877 - 934",
+"pic":"lib/images/p221.png",
+"ty0":"lib/images/mice.png",
+"ty1":"lib/images/mground.png",
+"ncp":"CP 1271 - 1340",
 "w0":"lib/images/wsnow.png",
-"w1":"lib/images/wcloudy.png",
-"hcp":"CP 1096 - 1167",
-"sh":"lib/images/sh1.png",
-"b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p257.png","bu12":"火焰雞","bu13":"lib/images/Fire.png","bu14":"火焰旋渦","bu15":"lib/images/Fire.png","bu16":"爆炸烈焰","bu21":"lib/images/p146.png","bu22":"火焰鳥","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p136.png","bu32":"火伊布","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
+"w1":"lib/images/wsun.png",
+"hcp":"CP 1589 - 1675",
+"sh":"",
+"b1":"lib/images/Poison.png","b2":"lib/images/Electric.png","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fire.png","g2":"lib/images/Fighting.png","g3":"lib/images/Grass.png","g4":"lib/images/Water.png","g5":"lib/images/Steel.png","g6":"","g7":"","g8":"","g9":"","n":"長毛豬","bu11":"lib/images/p376.png","bu12":"巨金怪","bu13":"lib/images/Steel.png","bu14":"子彈拳","bu15":"lib/images/Steel.png","bu16":"彗星拳","bu21":"lib/images/p257.png","bu22":"火焰雞","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fire.png","bu26":"爆炸烈焰","bu31":"lib/images/p257.png","bu32":"火焰雞","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"爆炸烈焰"
+},
+{
+"pic":"lib/images/p227.png",
+"ty0":"lib/images/msteel.png",
+"ty1":"lib/images/mflying.png",
+"ncp":"CP 1139 - 1204",
+"w0":"lib/images/wsnow.png",
+"w1":"lib/images/wwindy.png",
+"hcp":"CP 1424 - 1506",
+"sh":"",
+"b1":"lib/images/Ground.png","b2":"lib/images/Dragon.png","b3":"lib/images/Psychic.png","b4":"lib/images/Normal.png","b5":"lib/images/Steel.png","b6":"lib/images/Flying.png","b7":"lib/images/Fairy.png","b8":"lib/images/Grass.png","b9":"lib/images/Bug.png","b10":"lib/images/Poison.png","g1":"lib/images/Fire.png","g2":"lib/images/Electric.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"盔甲鳥","bu11":"lib/images/p257.png","bu12":"火焰雞","bu13":"lib/images/Fire.png","bu14":"火焰旋渦","bu15":"lib/images/Fire.png","bu16":"爆炸烈焰","bu21":"lib/images/p386.png","bu22":"代歐奇希斯","bu23":"lib/images/Electric.png","bu24":"充電光束","bu25":"lib/images/Electric.png","bu26":"十萬伏特","bu31":"lib/images/p146.png","bu32":"火焰鳥","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
+},
+{
+"pic":"lib/images/p232.png",
+"ty0":"lib/images/mground.png",
+"ty1":"",
+"ncp":"CP 1644 - 1722",
+"w0":"lib/images/wsun.png",
+"w1":"",
+"hcp":"CP 2055 - 2152",
+"sh":"",
+"b1":"lib/images/Rock.png","b2":"lib/images/Poison.png","b3":"lib/images/Electric.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"lib/images/Ice.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"頓甲","bu11":"lib/images/p382.png","bu12":"蓋歐卡","bu13":"lib/images/Water.png","bu14":"攀瀑","bu15":"lib/images/Water.png","bu16":"水炮","bu21":"lib/images/p407.png","bu22":"羅絲雷朵","bu23":"lib/images/Grass.png","bu24":"飛葉快刀","bu25":"lib/images/Grass.png","bu26":"日光束","bu31":"lib/images/p407.png","bu32":"羅絲雷朵","bu33":"lib/images/Grass.png","bu34":"飛葉快刀","bu35":"lib/images/Grass.png","bu36":"打草結"
 }
 ]
