--- a/index.html
+++ b/index.html
@@ -11,26 +11,15 @@
 "b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹-阿羅拉","bu11":"lib/images/p473.png","bu12":"象牙豬","bu13":"lib/images/Ice.png","bu14":"細雪","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p461.png","bu22":"瑪狃拉","bu23":"lib/images/Ice.png","bu24":"冰礫","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p471.png","bu32":"冰伊布","bu33":"lib/images/Ice.png","bu34":"冰息","bu35":"lib/images/Ice.png","bu36":"雪崩"
 },
 {
-"pic":"lib/images/p204.png",
-"ty0":"lib/images/mbug.png",
+"pic":"lib/images/p200.png",
+"ty0":"lib/images/mghost.png",
 "ty1":"",
-"ncp":"CP 586 - 633",
-"w0":"lib/images/wrain.png",
+"ncp":"CP 1039 - 1100",
+"w0":"lib/images/wfoggy.png",
 "w1":"",
-"hcp":"CP 733 - 791",
+"hcp":"CP 1298 - 1376",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Fighting.png","b2":"lib/images/Grass.png","b3":"lib/images/Ground.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fire.png","g2":"lib/images/Flying.png","g3":"lib/images/Rock.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"榛果球","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p146.png","bu22":"火焰鳥","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Flying.png","bu26":"神鳥猛擊","bu31":"lib/images/p257.png","bu32":"火焰雞","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"爆炸烈焰"
-},
-{
-"pic":"lib/images/p207.png",
-"ty0":"lib/images/mground.png",
-"ty1":"lib/images/mflying.png",
-"ncp":"CP 1000 - 1061",
-"w0":"lib/images/wsun.png",
-"w1":"lib/images/wwindy.png",
-"hcp":"CP 1250 - 1326",
-"sh":"lib/images/sh1.png",
-"b1":"lib/images/Electric.png","b2":"lib/images/Fighting.png","b3":"lib/images/Bug.png","b4":"lib/images/Poison.png","b5":"lib/images/Ground.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Water.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"天蠍","bu11":"lib/images/p473.png","bu12":"象牙豬","bu13":"lib/images/Ice.png","bu14":"細雪","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p461.png","bu22":"瑪狃拉","bu23":"lib/images/Ice.png","bu24":"冰礫","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p471.png","bu32":"冰伊布","bu33":"lib/images/Ice.png","bu34":"冰息","bu35":"lib/images/Ice.png","bu36":"雪崩"
+"b1":"lib/images/Bug.png","b2":"lib/images/Poison.png","b3":"lib/images/Fighting.png","b4":"lib/images/Normal.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Dark.png","g2":"lib/images/Ghost.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"夢妖","bu11":"lib/images/p94.png","bu12":"耿鬼","bu13":"lib/images/Ghost.png","bu14":"舌舔","bu15":"lib/images/Ghost.png","bu16":"暗影球","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"暗影爪","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p94.png","bu32":"耿鬼","bu33":"lib/images/Ghost.png","bu34":"禍不單行","bu35":"lib/images/Ghost.png","bu36":"暗影球"
 },
 {
 "pic":"lib/images/p215.png",
@@ -53,5 +42,16 @@
 "hcp":"CP 1096 - 1167",
 "sh":"lib/images/sh1.png",
 "b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p257.png","bu12":"火焰雞","bu13":"lib/images/Fire.png","bu14":"火焰旋渦","bu15":"lib/images/Fire.png","bu16":"爆炸烈焰","bu21":"lib/images/p146.png","bu22":"火焰鳥","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p136.png","bu32":"火伊布","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
+},
+{
+"pic":"lib/images/p349.png",
+"ty0":"lib/images/mwater.png",
+"ty1":"",
+"ncp":"CP 132 - 157",
+"w0":"lib/images/wrain.png",
+"w1":"",
+"hcp":"CP 165 - 196",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Steel.png","b2":"lib/images/Water.png","b3":"lib/images/Ice.png","b4":"lib/images/Fire.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"lib/images/Electric.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"醜醜魚","bu11":"lib/images/p386a.png","bu12":"代歐奇希斯","bu13":"lib/images/Psychic.png","bu14":"意念頭錘","bu15":"lib/images/Electric.png","bu16":"電磁炮","bu21":"lib/images/p386a.png","bu22":"代歐奇希斯","bu23":"lib/images/Poison.png","bu24":"毒擊","bu25":"lib/images/Electric.png","bu26":"電磁炮","bu31":"lib/images/p386.png","bu32":"代歐奇希斯","bu33":"lib/images/Electric.png","bu34":"充電光束","bu35":"lib/images/Electric.png","bu36":"十萬伏特"
 }
 ]
