--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 "w1":"lib/images/wwindy.png",
 "hcp":"CP 2055 - 2153",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹-阿羅拉","bu11":"lib/images/p473.png","bu12":"象牙豬","bu13":"lib/images/Ice.png","bu14":"細雪","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p461.png","bu22":"瑪狃拉","bu23":"lib/images/Ice.png","bu24":"冰礫","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p471.png","bu32":"冰伊布","bu33":"lib/images/Ice.png","bu34":"冰息","bu35":"lib/images/Ice.png","bu36":"雪崩"
+"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹-阿羅拉","bu11":"lib/images/p646.png","bu12":"酋雷姆(Black)","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
 },
 {
 "pic":"lib/images/p200.png",
@@ -19,7 +19,7 @@
 "w1":"",
 "hcp":"CP 1298 - 1376",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Bug.png","b2":"lib/images/Poison.png","b3":"lib/images/Fighting.png","b4":"lib/images/Normal.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Dark.png","g2":"lib/images/Ghost.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"夢妖","bu11":"lib/images/p94.png","bu12":"耿鬼","bu13":"lib/images/Ghost.png","bu14":"舌舔","bu15":"lib/images/Ghost.png","bu16":"暗影球","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"暗影爪","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p94.png","bu32":"耿鬼","bu33":"lib/images/Ghost.png","bu34":"禍不單行","bu35":"lib/images/Ghost.png","bu36":"暗影球"
+"b1":"lib/images/Bug.png","b2":"lib/images/Poison.png","b3":"lib/images/Fighting.png","b4":"lib/images/Normal.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Dark.png","g2":"lib/images/Ghost.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"夢妖","bu11":"lib/images/p94.png","bu12":"耿鬼","bu13":"lib/images/Ghost.png","bu14":"舌舔","bu15":"lib/images/Ghost.png","bu16":"暗影球","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"暗影爪","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p609.png","bu32":"水晶燈火靈","bu33":"lib/images/Ghost.png","bu34":"禍不單行","bu35":"lib/images/Ghost.png","bu36":"暗影球"
 },
 {
 "pic":"lib/images/p215.png",
@@ -30,7 +30,18 @@
 "w1":"lib/images/wsnow.png",
 "hcp":"CP 1384 - 1465",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Ghost.png","b2":"lib/images/Ice.png","b3":"lib/images/Dark.png","b4":"lib/images/Psychic.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Fairy.png","g3":"lib/images/Bug.png","g4":"lib/images/Steel.png","g5":"lib/images/Fire.png","g6":"lib/images/Rock.png","g7":"","g8":"","g9":"","n":"狃拉","bu11":"lib/images/p286.png","bu12":"斗笠菇","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"爆裂拳","bu21":"lib/images/p68.png","bu22":"怪力","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p257.png","bu32":"火焰雞","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"真氣彈"
+"b1":"lib/images/Ghost.png","b2":"lib/images/Ice.png","b3":"lib/images/Dark.png","b4":"lib/images/Psychic.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Fairy.png","g3":"lib/images/Bug.png","g4":"lib/images/Steel.png","g5":"lib/images/Fire.png","g6":"lib/images/Rock.png","g7":"","g8":"","g9":"","n":"狃拉","bu11":"lib/images/p534.png","bu12":"修繕老頭","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"爆裂拳","bu21":"lib/images/p286.png","bu22":"斗笠菇","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p68.png","bu32":"怪力","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"爆裂拳"
+},
+{
+"pic":"lib/images/p302.png",
+"ty0":"lib/images/mdark.png",
+"ty1":"lib/images/mghost.png",
+"ncp":"CP 789 - 843",
+"w0":"lib/images/wfoggy.png",
+"w1":"",
+"hcp":"CP 986 - 1054",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Fighting.png","b2":"lib/images/Poison.png","b3":"lib/images/Psychic.png","b4":"lib/images/Normal.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fairy.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾魂眼","bu11":"lib/images/p282.png","bu12":"沙奈朵(Purified)","bu13":"lib/images/Fairy.png","bu14":"Charm Fast","bu15":"lib/images/Fairy.png","bu16":"魔法閃耀","bu21":"lib/images/p282.png","bu22":"沙奈朵","bu23":"lib/images/Fairy.png","bu24":"Charm Fast","bu25":"lib/images/Fairy.png","bu26":"魔法閃耀","bu31":"lib/images/p282.png","bu32":"沙奈朵(Shadow)","bu33":"lib/images/Fairy.png","bu34":"Charm Fast","bu35":"lib/images/Fairy.png","bu36":"魔法閃耀"
 },
 {
 "pic":"lib/images/p303.png",
@@ -41,17 +52,6 @@
 "w1":"lib/images/wcloudy.png",
 "hcp":"CP 1096 - 1167",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p257.png","bu12":"火焰雞","bu13":"lib/images/Fire.png","bu14":"火焰旋渦","bu15":"lib/images/Fire.png","bu16":"爆炸烈焰","bu21":"lib/images/p146.png","bu22":"火焰鳥","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p136.png","bu32":"火伊布","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
+"b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p643.png","bu12":"雷希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蟲","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
 },
-{
-"pic":"lib/images/p349.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"",
-"ncp":"CP 132 - 157",
-"w0":"lib/images/wrain.png",
-"w1":"",
-"hcp":"CP 165 - 196",
-"sh":"lib/images/sh1.png",
-"b1":"lib/images/Steel.png","b2":"lib/images/Water.png","b3":"lib/images/Ice.png","b4":"lib/images/Fire.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"lib/images/Electric.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"醜醜魚","bu11":"lib/images/p386a.png","bu12":"代歐奇希斯","bu13":"lib/images/Psychic.png","bu14":"意念頭錘","bu15":"lib/images/Electric.png","bu16":"電磁炮","bu21":"lib/images/p386a.png","bu22":"代歐奇希斯","bu23":"lib/images/Poison.png","bu24":"毒擊","bu25":"lib/images/Electric.png","bu26":"電磁炮","bu31":"lib/images/p386.png","bu32":"代歐奇希斯","bu33":"lib/images/Electric.png","bu34":"充電光束","bu35":"lib/images/Electric.png","bu36":"十萬伏特"
-}
 ]
