--- a/index.html
+++ b/index.html
@@ -1,56 +1,45 @@
 [
 {
-"pic":"lib/images/p28.png",
-"ty0":"lib/images/mground.png",
+"pic":"lib/images/p103.png",
+"ty0":"lib/images/mgrass.png",
+"ty1":"lib/images/mdragon.png",
+"ncp":"CP 1643 - 1722",
+"w0":"lib/images/wsun.png",
+"w1":"lib/images/wwindy.png",
+"hcp":"CP 2055 - 2153",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Steel.png","b2":"lib/images/Grass.png","b3":"lib/images/Ice.png","b4":"lib/images/Dragon.png","b5":"lib/images/Dark.png","b6":"lib/images/Normal.png","b7":"lib/images/Bug.png","b8":"lib/images/Rock.png","b9":"lib/images/Poison.png","g1":"lib/images/Fire.png","g2":"lib/images/Fighting.png","g3":"lib/images/Ground.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾帕路翁","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
+},
+{
+"pic":"lib/images/p126.png",
+"ty0":"lib/images/mfire.png",
 "ty1":"",
-"ncp":"CP 1288 - 1356",
+"ncp":"CP 1298 - 1367",
 "w0":"lib/images/wsun.png",
 "w1":"",
-"hcp":"CP 1610 - 1696",
+"hcp":"CP 1623 - 1710",
 "sh":"",
 "b1":"lib/images/Steel.png","b2":"lib/images/Grass.png","b3":"lib/images/Ice.png","b4":"lib/images/Dragon.png","b5":"lib/images/Dark.png","b6":"lib/images/Normal.png","b7":"lib/images/Bug.png","b8":"lib/images/Rock.png","b9":"lib/images/Poison.png","g1":"lib/images/Fire.png","g2":"lib/images/Fighting.png","g3":"lib/images/Ground.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾帕路翁","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
 },
 {
-"pic":"lib/images/p82.png",
-"ty0":"lib/images/melectric.png",
-"ty1":"lib/images/msteel.png",
-"ncp":"CP 1348 - 1420",
-"w0":"lib/images/wrain.png",
-"w1":"lib/images/wsnow.png",
-"hcp":"CP 1686 - 1775",
-"sh":"",
-"b1":"lib/images/Steel.png","b2":"lib/images/Grass.png","b3":"lib/images/Ice.png","b4":"lib/images/Dragon.png","b5":"lib/images/Dark.png","b6":"lib/images/Normal.png","b7":"lib/images/Bug.png","b8":"lib/images/Rock.png","b9":"lib/images/Poison.png","g1":"lib/images/Fire.png","g2":"lib/images/Fighting.png","g3":"lib/images/Ground.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾帕路翁","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
-},
-{
-"pic":"lib/images/p89.png",
-"ty0":"lib/images/mpoison.png",
+"pic":"lib/images/p156.png",
+"ty0":"lib/images/mfire.png",
 "ty1":"",
-"ncp":"CP 1501 - 1575",
-"w0":"lib/images/wcloudy.png",
+"ncp":"CP 887 - 944",
+"w0":"lib/images/wsun.png",
 "w1":"",
-"hcp":"CP 1876 - 1969",
+"hcp":"CP 1109 - 1180",
 "sh":"",
 "b1":"lib/images/Steel.png","b2":"lib/images/Grass.png","b3":"lib/images/Ice.png","b4":"lib/images/Dragon.png","b5":"lib/images/Dark.png","b6":"lib/images/Normal.png","b7":"lib/images/Bug.png","b8":"lib/images/Rock.png","b9":"lib/images/Poison.png","g1":"lib/images/Fire.png","g2":"lib/images/Fighting.png","g3":"lib/images/Ground.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾帕路翁","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
 },
 {
-"pic":"lib/images/p91.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"lib/images/mice.png",
-"ncp":"CP 1383 - 1455",
-"w0":"lib/images/wrain.png",
-"w1":"lib/images/wsnow.png",
-"hcp":"CP 1729 - 1819",
-"sh":"",
-"b1":"lib/images/Steel.png","b2":"lib/images/Grass.png","b3":"lib/images/Ice.png","b4":"lib/images/Dragon.png","b5":"lib/images/Dark.png","b6":"lib/images/Normal.png","b7":"lib/images/Bug.png","b8":"lib/images/Rock.png","b9":"lib/images/Poison.png","g1":"lib/images/Fire.png","g2":"lib/images/Fighting.png","g3":"lib/images/Ground.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾帕路翁","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
-},
-{
-"pic":"lib/images/p99.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"",
-"ncp":"CP 1540 - 1616",
-"w0":"lib/images/wrain.png",
-"w1":"",
-"hcp":"CP 1925 - 2020",
+"pic":"lib/images/p219.png",
+"ty0":"lib/images/mfire.png",
+"ty1":"lib/images/mrock.png",
+"ncp":"CP 914 - 972",
+"w0":"lib/images/wsun.png",
+"w1":"lib/images/wclsu.png",
+"hcp":"CP 1142 - 1215",
 "sh":"",
 "b1":"lib/images/Steel.png","b2":"lib/images/Grass.png","b3":"lib/images/Ice.png","b4":"lib/images/Dragon.png","b5":"lib/images/Dark.png","b6":"lib/images/Normal.png","b7":"lib/images/Bug.png","b8":"lib/images/Rock.png","b9":"lib/images/Poison.png","g1":"lib/images/Fire.png","g2":"lib/images/Fighting.png","g3":"lib/images/Ground.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾帕路翁","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
 }
