--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 [
 {
-"pic":"lib/images/p103al.png",
+"pic":"lib/images/p89.png",
+"ty0":"lib/images/mpoison.png",
+"ty1":"",
+"ncp":"CP 1501 - 1575",
+"w0":"lib/images/wcloudy.png",
+"w1":"",
+"hcp":"CP 1876 - 1969",
+"sh":"",
+"b1":"lib/images/Fighting.png","b2":"lib/images/Grass.png","b3":"lib/images/Bug.png","b4":"lib/images/Poison.png","b5":"lib/images/Fairy.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Psychic.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"臭臭泥","bu11":"lib/images/p150.png","bu12":"超夢","bu13":"lib/images/Psychic.png","bu14":"念力","bu15":"lib/images/Psychic.png","bu16":"精神擊破","bu21":"lib/images/p150.png","bu22":"超夢","bu23":"lib/images/Psychic.png","bu24":"精神利刃","bu25":"lib/images/Psychic.png","bu26":"精神擊破","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Psychic.png","bu36":"精神突進"
+},
+{
+"pic":"lib/images/p103.png",
 "ty0":"lib/images/mgrass.png",
 "ty1":"lib/images/mdragon.png",
 "ncp":"CP 1643 - 1722",
@@ -8,39 +19,39 @@
 "w1":"lib/images/wwindy.png",
 "hcp":"CP 2055 - 2153",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p646.png","bu12":"酋雷姆(Black)","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
+"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p646.png","bu12":"酋雷姆","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
 },
 {
-"pic":"lib/images/p126.png",
-"ty0":"lib/images/mfire.png",
-"ty1":"",
-"ncp":"CP 1298 - 1367",
-"w0":"lib/images/wsun.png",
+"pic":"lib/images/p164.png",
+"ty0":"lib/images/mnormal.png",
+"ty1":"lib/images/mflying.png",
+"ncp":"CP 1092 - 1156",
+"w0":"lib/images/wclsu.png",
+"w1":"lib/images/wwindy.png",
+"hcp":"CP 1365 - 1446",
+"sh":"",
+"b1":"lib/images/Grass.png","b2":"lib/images/Bug.png","b3":"lib/images/Ghost.png","b4":"lib/images/Ground.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Rock.png","g3":"lib/images/Electric.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"貓頭夜鷹","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p409.png","bu22":"戰槌龍","bu23":"lib/images/Rock.png","bu24":"擊落","bu25":"lib/images/Rock.png","bu26":"岩崩","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Electric.png","bu36":"電磁炮"
+},
+{
+"pic":"lib/images/p302.png",
+"ty0":"lib/images/mdark.png",
+"ty1":"lib/images/mghost.png",
+"ncp":"CP 789 - 843",
+"w0":"lib/images/wfoggy.png",
 "w1":"",
-"hcp":"CP 1623 - 1710",
-"sh":"",
-"b1":"lib/images/Ice.png","b2":"lib/images/Fire.png","b3":"lib/images/Grass.png","b4":"lib/images/Steel.png","b5":"lib/images/Bug.png","b6":"lib/images/Fairy.png","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"lib/images/Rock.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"鴨嘴火獸","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p99.png","bu22":"巨鉗蟹","bu23":"lib/images/Water.png","bu24":"泡沫","bu25":"lib/images/Water.png","bu26":"蟹鉗錘","bu31":"lib/images/p645.png","bu32":"土地雲(Therian)","bu33":"lib/images/Rock.png","bu34":"落石","bu35":"lib/images/Ground.png","bu36":"大地之力"
+"hcp":"CP 986 - 1054",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Fighting.png","b2":"lib/images/Poison.png","b3":"lib/images/Psychic.png","b4":"lib/images/Normal.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fairy.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾魂眼","bu11":"lib/images/p282.png","bu12":"沙奈朵(Purified)","bu13":"lib/images/Fairy.png","bu14":"撒嬌","bu15":"lib/images/Fairy.png","bu16":"魔法閃耀","bu21":"lib/images/p282.png","bu22":"沙奈朵","bu23":"lib/images/Fairy.png","bu24":"撒嬌","bu25":"lib/images/Fairy.png","bu26":"魔法閃耀","bu31":"lib/images/p282.png","bu32":"沙奈朵(Shadow)","bu33":"lib/images/Fairy.png","bu34":"撒嬌","bu35":"lib/images/Fairy.png","bu36":"魔法閃耀"
 },
 {
-"pic":"lib/images/p156.png",
-"ty0":"lib/images/mfire.png",
-"ty1":"",
-"ncp":"CP 887 - 944",
-"w0":"lib/images/wsun.png",
-"w1":"",
-"hcp":"CP 1109 - 1180",
-"sh":"",
-"b1":"lib/images/Ice.png","b2":"lib/images/Fire.png","b3":"lib/images/Grass.png","b4":"lib/images/Steel.png","b5":"lib/images/Bug.png","b6":"lib/images/Fairy.png","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"lib/images/Rock.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"火岩鼠","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p99.png","bu22":"巨鉗蟹","bu23":"lib/images/Water.png","bu24":"泡沫","bu25":"lib/images/Water.png","bu26":"蟹鉗錘","bu31":"lib/images/p645.png","bu32":"土地雲(Therian)","bu33":"lib/images/Rock.png","bu34":"落石","bu35":"lib/images/Ground.png","bu36":"大地之力"
-},
-{
-"pic":"lib/images/p219.png",
-"ty0":"lib/images/mfire.png",
-"ty1":"lib/images/mrock.png",
-"ncp":"CP 914 - 972",
-"w0":"lib/images/wsun.png",
-"w1":"lib/images/wclsu.png",
-"hcp":"CP 1142 - 1215",
-"sh":"",
-"b1":"lib/images/Normal.png","b2":"lib/images/Ice.png","b3":"lib/images/Fairy.png","b4":"lib/images/Bug.png","b5":"lib/images/Poison.png","b6":"lib/images/Flying.png","b7":"lib/images/Fire.png","b8":"","b9":"","g1":"lib/images/Water.png","g2":"lib/images/Ground.png","g3":"lib/images/Rock.png","g4":"lib/images/Fighting.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"熔岩蝸牛","bu11":"lib/images/p99.png","bu12":"巨鉗蟹","bu13":"lib/images/Water.png","bu14":"泡沫","bu15":"lib/images/Water.png","bu16":"蟹鉗錘","bu21":"lib/images/p645.png","bu22":"土地雲(Therian)","bu23":"lib/images/Ground.png","bu24":"泥巴射擊","bu25":"lib/images/Ground.png","bu26":"大地之力","bu31":"lib/images/p382.png","bu32":"蓋歐卡","bu33":"lib/images/Water.png","bu34":"攀瀑","bu35":"lib/images/Water.png","bu36":"水炮"
+"pic":"lib/images/p303.png",
+"ty0":"lib/images/msteel.png",
+"ty1":"lib/images/mfairy.png",
+"ncp":"CP 877 - 934",
+"w0":"lib/images/wsnow.png",
+"w1":"lib/images/wcloudy.png",
+"hcp":"CP 1096 - 1167",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
 }
 ]
