--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 "b1":"lib/images/Fighting.png","b2":"lib/images/Grass.png","b3":"lib/images/Bug.png","b4":"lib/images/Poison.png","b5":"lib/images/Fairy.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Psychic.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"臭臭泥","bu11":"lib/images/p150.png","bu12":"超夢","bu13":"lib/images/Psychic.png","bu14":"念力","bu15":"lib/images/Psychic.png","bu16":"精神擊破","bu21":"lib/images/p150.png","bu22":"超夢","bu23":"lib/images/Psychic.png","bu24":"精神利刃","bu25":"lib/images/Psychic.png","bu26":"精神擊破","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Psychic.png","bu36":"精神突進"
 },
 {
-"pic":"lib/images/p103.png",
+"pic":"lib/images/p103al.png",
 "ty0":"lib/images/mgrass.png",
 "ty1":"lib/images/mdragon.png",
 "ncp":"CP 1643 - 1722",
