--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "pic":"lib/images/p89.png",
 "ty0":"lib/images/mpoison.png",
 "ty1":"",
-"ncp":"CP 1501 - 1575",
+"ncp":"CP 1501 - 15750000",
 "w0":"lib/images/wcloudy.png",
 "w1":"",
 "hcp":"CP 1876 - 1969",
