--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 "ncp":"CP 1501 - 1575",
 "w0":"lib/images/wcloudy.png",
 "w1":"",
-"hcp":"CP 1876 - 19690000",
+"hcp":"CP 1876 - 1969",
 "sh":"",
 "b1":"lib/images/Fighting.png","b2":"lib/images/Grass.png","b3":"lib/images/Bug.png","b4":"lib/images/Poison.png","b5":"lib/images/Fairy.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Psychic.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"臭臭泥","bu11":"lib/images/p150.png","bu12":"超夢","bu13":"lib/images/Psychic.png","bu14":"念力","bu15":"lib/images/Psychic.png","bu16":"精神擊破","bu21":"lib/images/p150.png","bu22":"超夢","bu23":"lib/images/Psychic.png","bu24":"精神利刃","bu25":"lib/images/Psychic.png","bu26":"精神擊破","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Psychic.png","bu36":"精神突進"
 },
@@ -17,7 +17,7 @@
 "ncp":"CP 1643 - 1722",
 "w0":"lib/images/wsun.png",
 "w1":"lib/images/wwindy.png",
-"hcp":"CP 2055 - 215300000",
+"hcp":"CP 2055 - 2153",
 "sh":"lib/images/sh1.png",
 "b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p646.png","bu12":"酋雷姆","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
 },
