--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 "b1":"lib/images/Bug.png","b2":"lib/images/Dark.png","b3":"lib/images/Ghost.png","b4":"lib/images/Dragon.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Steel.png","g2":"lib/images/Poison.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"胖可丁","bu11":"lib/images/p386a.png","bu12":"代歐奇希斯","bu13":"lib/images/Poison.png","bu14":"毒擊","bu15":"lib/images/Electric.png","bu16":"電磁炮","bu21":"lib/images/p483.png","bu22":"帝牙盧卡","bu23":"lib/images/Steel.png","bu24":"金屬爪","bu25":"lib/images/Steel.png","bu26":"鐵頭","bu31":"lib/images/p407.png","bu32":"羅絲雷朵","bu33":"lib/images/Poison.png","bu34":"毒擊","bu35":"lib/images/Poison.png","bu36":"污泥炸彈"
 },
 {
-"pic":"lib/images/p103.png",
+"pic":"lib/images/p103al.png",
 "ty0":"lib/images/mgrass.png",
 "ty1":"lib/images/mdragon.png",
 "ncp":"CP 1643 - 1722",
