--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 [
 {
+"pic":"lib/images/p28.png",
+"ty0":"lib/images/mground.png",
+"ty1":"",
+"ncp":"CP 1288 - 1356",
+"w0":"lib/images/wsun.png",
+"w1":"",
+"hcp":"CP 1610 - 1696",
+"sh":"",
+"b1":"lib/images/Rock.png","b2":"lib/images/Poison.png","b3":"lib/images/Electric.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"lib/images/Ice.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"穿山王","bu11":"lib/images/p555.png","bu12":"達摩狒狒(GalarianZen)","bu13":"lib/images/Ice.png","bu14":"冰凍牙","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p555.png","bu22":"達摩狒狒(GalarianZen)","bu23":"lib/images/Ice.png","bu24":"冰凍牙","bu25":"lib/images/Ice.png","bu26":"冰凍拳","bu31":"lib/images/p99.png","bu32":"巨鉗蟹","bu33":"lib/images/Water.png","bu34":"泡沫","bu35":"lib/images/Water.png","bu36":"蟹鉗錘"
+},
+{
 "pic":"lib/images/p103.png",
 "ty0":"lib/images/mgrass.png",
 "ty1":"lib/images/mdragon.png",
@@ -8,50 +19,39 @@
 "w1":"lib/images/wwindy.png",
 "hcp":"CP 2055 - 2153",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p646.png","bu12":"酋雷姆","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
+"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p555.png","bu12":"達摩狒狒(GalarianZen)","bu13":"lib/images/Ice.png","bu14":"冰凍牙","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p555.png","bu22":"達摩狒狒(GalarianZen)","bu23":"lib/images/Ice.png","bu24":"冰凍牙","bu25":"lib/images/Ice.png","bu26":"冰凍拳","bu31":"lib/images/p555.png","bu32":"達摩狒狒(GalarianStandard)","bu33":"lib/images/Ice.png","bu34":"冰凍牙","bu35":"lib/images/Ice.png","bu36":"雪崩"
 },
 {
-"pic":"lib/images/p215.png",
-"ty0":"lib/images/mdark.png",
-"ty1":"lib/images/mice.png",
-"ncp":"CP 1107 - 1172",
-"w0":"lib/images/wfoggy.png",
-"w1":"lib/images/wsnow.png",
-"hcp":"CP 1384 - 1465",
-"sh":"lib/images/sh1.png",
-"b1":"lib/images/Ghost.png","b2":"lib/images/Ice.png","b3":"lib/images/Dark.png","b4":"lib/images/Psychic.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Fairy.png","g3":"lib/images/Bug.png","g4":"lib/images/Steel.png","g5":"lib/images/Fire.png","g6":"lib/images/Rock.png","g7":"","g8":"","g9":"","n":"狃拉","bu11":"lib/images/p448.png","bu12":"路卡利歐","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"波導彈","bu21":"lib/images/p534.png","bu22":"修建老匠","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p286.png","bu32":"斗笠菇","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"爆裂拳"
-},
-{
-"pic":"lib/images/p281.png",
-"ty0":"lib/images/mpsychic.png",
-"ty1":"lib/images/mfairy.png",
-"ncp":"CP 508 - 552",
-"w0":"lib/images/wwindy.png",
-"w1":"lib/images/wcloudy.png",
-"hcp":"CP 635 - 690",
-"sh":"",
-"b1":"lib/images/Psychic.png","b2":"lib/images/Fighting.png","b3":"lib/images/Dragon.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Poison.png","g2":"lib/images/Ghost.png","g3":"lib/images/Steel.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"奇魯莉安","bu11":"lib/images/p376.png","bu12":"巨金怪","bu13":"lib/images/Steel.png","bu14":"子彈拳","bu15":"lib/images/Steel.png","bu16":"彗星拳","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"舌舔","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p94.png","bu32":"耿鬼","bu33":"lib/images/Ghost.png","bu34":"暗影爪","bu35":"lib/images/Ghost.png","bu36":"暗影球"
-},
-{
-"pic":"lib/images/p303.png",
-"ty0":"lib/images/msteel.png",
-"ty1":"lib/images/mfairy.png",
-"ncp":"CP 877 - 934",
-"w0":"lib/images/wsnow.png",
-"w1":"lib/images/wcloudy.png",
-"hcp":"CP 1096 - 1167",
-"sh":"lib/images/sh1.png",
-"b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p244.png","bu12":"炎帝","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p392.png","bu22":"烈焰猴","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"爆炸烈焰","bu31":"lib/images/p244.png","bu32":"炎帝","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
-},
-{
-"pic":"lib/images/p329.png",
-"ty0":"lib/images/mground.png",
-"ty1":"lib/images/mdragon.png",
-"ncp":"CP 650 - 699",
+"pic":"lib/images/p126.png",
+"ty0":"lib/images/mfire.png",
+"ty1":"",
+"ncp":"CP 1298 - 1367",
 "w0":"lib/images/wsun.png",
-"w1":"lib/images/wwindy.png",
-"hcp":"CP 813 - 875",
-"sh":"",
-"b1":"lib/images/Rock.png","b2":"lib/images/Poison.png","b3":"lib/images/Fire.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Dragon.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"超音波幼蟲","bu11":"lib/images/p646.png","bu12":"酋雷姆","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
+"w1":"",
+"hcp":"CP 1623 - 1710",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Ice.png","b2":"lib/images/Fire.png","b3":"lib/images/Grass.png","b4":"lib/images/Steel.png","b5":"lib/images/Bug.png","b6":"lib/images/Fairy.png","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"lib/images/Rock.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"鴨嘴火獸","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p99.png","bu22":"巨鉗蟹","bu23":"lib/images/Water.png","bu24":"泡沫","bu25":"lib/images/Water.png","bu26":"蟹鉗錘","bu31":"lib/images/p645.png","bu32":"土地雲","bu33":"lib/images/Rock.png","bu34":"落石","bu35":"lib/images/Ground.png","bu36":"大地之力"
+},
+{
+"pic":"lib/images/p315.png",
+"ty0":"lib/images/mgrass.png",
+"ty1":"lib/images/mpoison.png",
+"ncp":"CP 1007 - 1068",
+"w0":"lib/images/wsun.png",
+"w1":"lib/images/wcloudy.png",
+"hcp":"CP 1258 - 1335",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Fighting.png","b2":"lib/images/Water.png","b3":"lib/images/Electric.png","b4":"lib/images/Fairy.png","b5":"lib/images/Grass.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fire.png","g2":"lib/images/Flying.png","g3":"lib/images/Ice.png","g4":"lib/images/Psychic.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"毒薔薇","bu11":"lib/images/p150.png","bu12":"超夢","bu13":"lib/images/Psychic.png","bu14":"念力","bu15":"lib/images/Psychic.png","bu16":"精神擊破","bu21":"lib/images/p150.png","bu22":"超夢","bu23":"lib/images/Psychic.png","bu24":"精神利刃","bu25":"lib/images/Psychic.png","bu26":"精神擊破","bu31":"lib/images/p555.png","bu32":"達摩狒狒(GalarianZen)","bu33":"lib/images/Ice.png","bu34":"冰凍牙","bu35":"lib/images/Ice.png","bu36":"雪崩"
+},
+{
+"pic":"lib/images/p449.png",
+"ty0":"lib/images/mground.png",
+"ty1":"",
+"ncp":"CP 723 - 776",
+"w0":"lib/images/wsun.png",
+"w1":"",
+"hcp":"CP 904 - 970",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Rock.png","b2":"lib/images/Poison.png","b3":"lib/images/Electric.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"lib/images/Ice.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"沙河馬","bu11":"lib/images/p555.png","bu12":"達摩狒狒(GalarianZen)","bu13":"lib/images/Ice.png","bu14":"冰凍牙","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p555.png","bu22":"達摩狒狒(GalarianZen)","bu23":"lib/images/Ice.png","bu24":"冰凍牙","bu25":"lib/images/Ice.png","bu26":"冰凍拳","bu31":"lib/images/p99.png","bu32":"巨鉗蟹","bu33":"lib/images/Water.png","bu34":"泡沫","bu35":"lib/images/Water.png","bu36":"蟹鉗錘"
 }
 ]
