--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 "b1":"lib/images/Rock.png","b2":"lib/images/Poison.png","b3":"lib/images/Electric.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"lib/images/Ice.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"穿山王","bu11":"lib/images/p555.png","bu12":"達摩狒狒(GalarianZen)","bu13":"lib/images/Ice.png","bu14":"冰凍牙","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p555.png","bu22":"達摩狒狒(GalarianZen)","bu23":"lib/images/Ice.png","bu24":"冰凍牙","bu25":"lib/images/Ice.png","bu26":"冰凍拳","bu31":"lib/images/p99.png","bu32":"巨鉗蟹","bu33":"lib/images/Water.png","bu34":"泡沫","bu35":"lib/images/Water.png","bu36":"蟹鉗錘"
 },
 {
-"pic":"lib/images/p103.png",
+"pic":"lib/images/p103al.png",
 "ty0":"lib/images/mgrass.png",
 "ty1":"lib/images/mdragon.png",
 "ncp":"CP 1643 - 1722",
